--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ body {
   text-decoration: none;
   color: inherit;
   vertical-align: top;
+  outline: none;
 }
 .header-menu a:hover {
   color: rgb(129, 179, 210);
@@ -184,7 +185,7 @@ body {
 }
 .index-search {
   position: absolute;
-  top: 100;
+  top: 33%;
   left: 50%;
   transform: translate(-50%);
   width: 568px;
@@ -219,10 +220,10 @@ body {
   margin-bottom: 31px;
 }
 .number::before {
-  content:"\2013";
+  content:"\2013  ";
 }
 .number::after {
-  content:"\2013";
+  content:" \2013";
 }
 .features-first-text b,
 .features-second-text b,
@@ -244,11 +245,11 @@ body {
   font-size: 14px;
   padding-top: 25px;
   padding-bottom: 8px;
-  height: 1.5;
+  line-height: 1.5;
 }
 .features-first-text p {
   font-size: 14px;
-  height: 1.5;
+  line-height: 1.5;
 }
 .index-content a {
   display: inline-block;
@@ -272,10 +273,7 @@ body {
 }
 .index-search form {
   width: 568px;
-  min=height: 395px;
-}
-.form-group input {
-  background-color: rgb(242, 242, 242);
+  min-height: 395px;
 }
 .form-group {
   font-size: 0;
@@ -290,7 +288,6 @@ body {
   float: right;
   margin-top: 32px;
   margin-right: 53px;
-
 }
 .form-group label {
   display: inline-block;
@@ -309,7 +306,10 @@ body {
 .form-group-btn .search:hover {
   background-color: rgb(102, 158, 192);
 }
-
+.form-group-btn .search:active {
+  background-color: rgb(84, 150, 189);
+  color: rgba(255, 255, 255, .3)
+}
 .form-group-btn .search {
   width: 458px;
   min-height: 58px;
@@ -330,11 +330,7 @@ body {
 }
 .field-number {
   width: 38px;
-  height: 38px;
-}
-.form-group-controls input[type="number"] {
-  outline: none;
-  border: 0;
+  height: 37px;
 }
 .index-search label {
   font-size: 14px;
@@ -433,7 +429,7 @@ body {
 }
 .price-controls label {
   font-size: 14px;
-  line-height: 38px;
+  line-height: 32px;
   cursor: pointer;
 }
 .price-controls .min-price,
@@ -451,6 +447,7 @@ body {
   font: inherit;
   background: none;
   border: none;
+  height: 25px;
 }
 .range-controls {
   position: relative;
@@ -500,7 +497,7 @@ body {
   display: block;
   margin: 0;
   margin-left:82px;
-  padding: 6px 33px;
+  padding: 6px 36px;
   font-size: 14px;
   line-height: 1.5;
   color: rgb(255, 255, 255);
@@ -509,6 +506,7 @@ body {
   border: 2px solid rgb(255, 255, 255);
   border-radius: 2px;
   cursor: pointer;
+  font-family: inherit;
 }
 .btn-range:hover {
   color: rgb(0, 0, 0);
@@ -637,8 +635,9 @@ body {
   background-color: rgb(242, 242, 242);
   color: rgb(102, 102, 102);
   float: right;
-  margin-right: 84px;
-  margin-top: 72px;
+  margin-right: 70px;
+  margin-top: 66px;
+  padding: 3px 15px 3px 15px;
 }
 .hotel-rating-four::before {
   content: "";
@@ -694,6 +693,10 @@ body {
   line-height: 1.3;
   margin-bottom: 5px;
 }
+.btn-hotel-name {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+}
 .legend-result:hover {
   color: rgb(129, 179, 210);
 }
@@ -701,7 +704,9 @@ body {
   color: rgb(96, 78, 67);
   opacity: 0.3;
 }
-.result-item-text p {
+.result-item-text mark {
+  background-color: rgb(255, 255, 255);
+  display: block;
   margin-top: 0;
   margin-bottom: 12px;
 }
@@ -875,16 +880,16 @@ body {
 .btn-buy span:active {
   opacity: 0.3;
 }
-input[type="checkbox"] {
+.form-group input[type="checkbox"] {
   display: none;
 }
-input[type="checkbox"] + label {
+.form-group input[type="checkbox"] + label {
   display: block;
   padding-left: 35px;
   position: relative;
   cursor: pointer;
 }
-input[type="checkbox"] + label::before {
+.form-group input[type="checkbox"] + label::before {
   content: "";
   display: block;
   position: absolute;
@@ -896,7 +901,23 @@ input[type="checkbox"] + label::before {
   height: 22px;
   background-position: -10px -52px;
   }
-  input[type="checkbox"]:checked + label::before {
+  .form-group input[type="checkbox"]:disabled + label {
+    opacity: .33;
+    cursor: not-allowed;
+  }
+  .form-group input[type="checkbox"]:checked + label::before {
+  content: "";
+  display: block;
+  background-image: url("img/sprite.png");
+  background-repeat: no-repeat;
+  width: 26px;
+  height: 22px;
+  background-position: -10px -10px;
+  position: absolute;
+  left: 0;
+  top:0;
+}
+.box-second input[type="checkbox"] + label::before {
   content: "";
   display: block;
   background-image: url("img/sprite.png");
@@ -909,7 +930,7 @@ input[type="checkbox"] + label::before {
   top:0;
 }
 .first-check {
-  margin-top: 28px;
+  margin-top: 26px;
 }
 .second-check {
   margin-top: 20px;
@@ -948,16 +969,11 @@ input[type="checkbox"] + label::before {
   left: -30px;
 }
 .form-group input[type="text"] {
-  font-size: 14px;
   padding-top: 14px;
   padding-left: 12px;
   padding-bottom: 14px;
-  background-color: rgb(242, 242, 242);
-  font-weight: bold;
-  border: 0;
   width: 346px;
   padding-right: 100px;
-  outline: none;
 }
 .form-group input:hover {
   background-color: rgb(235, 235, 235);
@@ -999,3 +1015,20 @@ input[type="checkbox"] + label::before {
 }
 .button-control:active {
   color: rgb(129, 179, 210);
+}
+  .form-group input {
+  font-family: inherit;
+  font-size: 14px;
+  background-color: rgb(242, 242, 242);
+  font-weight: bold;
+  border: 0;
+  outline: none;
+}
+.price-controls input[type=number]::-webkit-outer-spin-button,
+.price-controls input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+.price-controls input[type=number] {
+    -moz-appearance:textfield;
+    }
