--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
   line-height: 1.24;
 }
 .big-text-features{
-  margin-top: 60px;
+  margin-top: 62px;
   text-align: center;
   font-size: 21px;
   line-height: 1.24;
@@ -40,6 +40,7 @@ body {
   font-size: 21px;
   line-height: 1.23;
   font-weight: bold;
+  font-family: inherit;
 }
 .main-header {
   position: relative;
@@ -164,7 +165,7 @@ body {
 }
 .footer-contacts {
   width: 240px;
-  margin-right: 85px;
+  margin-right: 88px;
   margin-left: 73px;
   padding-top: 45px;
   padding-bottom: 50px;
@@ -220,10 +221,10 @@ body {
   margin-bottom: 31px;
 }
 .number::before {
-  content:"\2013  ";
+  content:"\2014  ";
 }
 .number::after {
-  content:" \2013";
+  content:" \2014";
 }
 .features-first-text b,
 .features-second-text b,
@@ -406,11 +407,12 @@ body {
   font-weight: bold;
   font-size: 16px;
   line-height: 1.3px;
-  padding-top: 23px;
+  padding-top: 20px;
+  padding-left: 2px;
 }
 .price-controls {
   height: 36px;
-  margin-bottom: 20px;
+  margin-bottom: 22px;
   margin-top: 10px;
   border: 2px solid rgb(255,255,255);
   border-radius: 2px;
@@ -497,7 +499,7 @@ body {
   display: block;
   margin: 0;
   margin-left:82px;
-  padding: 6px 36px;
+  padding: 6px 35px 5px 35px;
   font-size: 14px;
   line-height: 1.5;
   color: rgb(255, 255, 255);
@@ -537,8 +539,8 @@ body {
 .result-top {
   display: inline-block;
   vertical-align: top;
-  margin-top: 28px;
-  margin-left: 73px;
+  margin-top: 26px;
+  margin-left: 72px;
   width: 1123px;
 }
 .result-top strong {
@@ -550,7 +552,7 @@ body {
   font-size: 12px;
   line-height: 1.5;
   font-weight: normal;
-  margin-right: 40px;
+  margin-right: 37px;
 }
 .result-menu {
   display: inline-block;
@@ -635,14 +637,14 @@ body {
   background-color: rgb(242, 242, 242);
   color: rgb(102, 102, 102);
   float: right;
-  margin-right: 70px;
-  margin-top: 66px;
+  margin-right: 71px;
+  margin-top: 68px;
   padding: 3px 15px 3px 15px;
 }
 .hotel-rating-four::before {
   content: "";
   position: absolute;
-  left: 50%;
+  left: 52%;
   top: 5%;
   background-image: url("img/sprite.png");
   background-repeat: no-repeat;
@@ -654,7 +656,7 @@ body {
 .hotel-rating-three::before {
   content: "";
   position: absolute;
-  left: 55%;
+  left: 56%;
   top: 5%;
   background-image: url("img/sprite.png");
   background-repeat: no-repeat;
@@ -666,7 +668,7 @@ body {
 .hotel-rating-two::before {
   content: "";
   position: absolute;
-  left: 60%;
+  left: 62%;
   top: 5%;
   background-image: url("img/sprite.png");
   background-repeat: no-repeat;
@@ -691,7 +693,7 @@ body {
   line-height: 1;
   font-size: 21px;
   line-height: 1.3;
-  margin-bottom: 5px;
+  margin-bottom: 4px;
 }
 .btn-hotel-name {
   text-decoration: none;
@@ -718,7 +720,7 @@ body {
   line-height: 1.5;
 }
 .type-result {
-  margin-right: 20px;
+  margin-right: 18px;
 }
 .result-second {
   padding-left: 45px;
@@ -788,17 +790,17 @@ body {
   transform: translate(-50%, -50%);
 }
  .social-btn-tv::before {
-   width: 17px;
-   height: 15px;
-   background-position: -10px -436px;
+  width: 17px;
+  height: 15px;
+  background-position: -10px -436px;
 }
 .footer-social .social-btn:hover {
   background-color: rgb(102, 158, 192);
 }
  .social-btn-fb::before {
-   width: 10px;
-   height: 19px;
-   background-position: -10px -220px;
+  width: 10px;
+  height: 19px;
+  background-position: -10px -220px;
 }
 .social-btn-yt::before {
   width: 20px;
@@ -850,18 +852,17 @@ body {
 }
 .btn-info {
   background-color: rgb(129, 179,210);
-  padding: 4px 16px 4px 17px;
+  padding: 4px 16px 4px 16px;
   min-height: 17px;
   color: rgb(255, 255, 255);
   text-decoration: none;
   font-size: 14px;
   line-height: 1.5;
   display: inline-block;
-  margin-right: 2px;
 }
 .btn-buy {
   background-color: rgb(118, 99,87);
-  padding: 4px 16px 5px 17px;
+  padding: 4px 16px 5px 18px;
   min-height: 17px;
   color: rgb(255, 255, 255);
   text-decoration: none;
@@ -885,9 +886,9 @@ body {
 }
 .form-group input[type="checkbox"] + label {
   display: block;
-  padding-left: 35px;
   position: relative;
   cursor: pointer;
+  font-size: 14px;
 }
 .form-group input[type="checkbox"] + label::before {
   content: "";
@@ -902,8 +903,8 @@ body {
   background-position: -10px -52px;
   }
   .form-group input[type="checkbox"]:disabled + label {
-    opacity: .33;
-    cursor: not-allowed;
+  opacity: .33;
+  cursor: not-allowed;
   }
   .form-group input[type="checkbox"]:checked + label::before {
   content: "";
@@ -930,13 +931,12 @@ body {
   top:0;
 }
 .first-check {
-  margin-top: 26px;
+  margin-top: 25px;
+  padding-left: 38px;
 }
 .second-check {
-  margin-top: 20px;
-}
-.third-check {
-  margin-top: 20px;
+  margin-top: 25px;
+  padding-left: 42px;
 }
 .index-content {
   position: relative;
@@ -994,21 +994,21 @@ body {
 }
 .form-group input[type=number]::-webkit-outer-spin-button,
 .form-group input[type=number]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 .form-group input[type=number] {
-    -moz-appearance:textfield;
+  -moz-appearance:textfield;
     }
 .button-control {
-   border: 0;
-   background-color: rgb(242, 242, 242);
-   padding:  6px 13px 7px 13px;
-   outline: none;
-   font-weight: bold;
-   color: rgb(169, 169, 169);
-   font-size: 21px;
-   vertical-align: top;
+  border: 0;
+  background-color: rgb(242, 242, 242);
+  padding:  6px 13px 7px 13px;
+  outline: none;
+  font-weight: bold;
+  color: rgb(169, 169, 169);
+  font-size: 21px;
+  vertical-align: top;
 }
 .button-control:hover {
   color: rgb(0, 0, 0);
@@ -1026,9 +1026,9 @@ body {
 }
 .price-controls input[type=number]::-webkit-outer-spin-button,
 .price-controls input[type=number]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 .price-controls input[type=number] {
-    -moz-appearance:textfield;
+  -moz-appearance:textfield;
     }
