--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,10 @@ body {
   margin-right: 240px;
 }
 .container {
+  display: flex;
+  flex-direction: column;
   width: 1200px;
+  min-height: 100vh;
   margin: 0 auto;
   padding: 0;
   position: relative;
@@ -375,7 +378,7 @@ body {
   color: rgb(51, 51, 51);
 }
 .selection {
-  background-image: url("../img/hotels/background-search.jpg");
+  background: rgb(123, 109, 108) url("../img/hotels/background-search.jpg");
   background-position:  right 0px top -300px;
   height: 220px;
   width: 1200px;
@@ -560,6 +563,7 @@ body {
   margin-top: 0;
   margin-bottom: 0;
   vertical-align: bottom;
+  max-width: 740px;
 }
 .result-menu li {
   display: inline-block;
@@ -682,11 +686,13 @@ body {
   vertical-align: top;
   margin-right: 30px;
   margin-top: 5px;
+  width: 135px;
 }
 .result-item-text {
   display: inline-block;
   vertical-align: top;
   font-size: initial;
+  width: calc(100% - 165px);
 }
 .legend-result {
   margin-top: 0;
@@ -718,6 +724,7 @@ body {
   vertical-align: middle;
   font-size: 14px;
   line-height: 1.5;
+  max-width: 150px;
 }
 .type-result {
   margin-right: 18px;
